GNOME Bugzilla – Bug 706276
uvch264src: don't error out on incomplete aux data segment with Logitech C920
Last modified: 2013-08-20 18:12:08 UTC
Created attachment 252166 [details] Do not allow uvch264src to kill pipeline on missed MJPEG segment... It appears that the Logitech C920 sometimes drops the next to last segment of RAW aux data contained within the MJPEG container. H264 data that is multiplexed with in the same container does not appear to be affected. This appears to be a bug in the Logitech C920 firmware and uvch264src should not flag and error killing the pipeline...see the attached patch...sometimes it can take 24 hours of continuous streaming for the problem to occur, but sometimes it can take only a couple of hours.
Created attachment 252171 [details] [review] Do not allow uvch264src to kill pipeline on missed MJPEG segment...
Comment on attachment 252171 [details] [review] Do not allow uvch264src to kill pipeline on missed MJPEG segment... No C99 comments please (//), also please attach the patch in "git format-patch" style. For this commit it locally (make sure to use the correct mail address and name in git), and then call "git format-patch -1".
Will do.
Created attachment 252232 [details] [review] Do not allow uvch264src to kill pipeline on missed MJPEG segment... Git formatted version of patch as requested by Sebastian.
Review of attachment 252232 [details] [review]: ::: sys/uvch264/gstuvch264_mjpgdemux.c @@ +498,3 @@ /* Check for APP4 (0xe4) marker in the jpeg */ if (info.data[i] == 0xff && info.data[i + 1] == 0xe4) { + /*guint16 segment_size;*/ Please just remove the line, don't leave commented out code.
Created attachment 252280 [details] [review] Do not allow uvch264src to kill pipeline on missed MJPEG segment... Here is the Git formatted patch with the commented out variable declaration "segment_size" removed.
*** Bug 706423 has been marked as a duplicate of this bug. ***
Thanks for the patch! commit 006e7a3428bd097fc6e6c648332bff583dd434f9 Author: Robert Krakora <rob.krakora@messagenetsystems.com> Date: Mon Aug 19 15:31:51 2013 -0400 uvch264src: don't error out on incomplete aux data segment It appears that the Logitech C920 sometimes drops the next to last segment of RAW aux data contained within the MJPEG container. H264 data that is multiplexed with in the same container does not appear to be affected. This appears to be a bug in the Logitech C920 firmware and uvch264src should not error out in this case. Sometimes it can take 24 hours of continuous streaming for the problem to occur, but sometimes it takes only a couple of hours. https://bugzilla.gnome.org/show_bug.cgi?id=706276